--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ Django==4.0.5
 django-environ==0.9.0
 django-filter==22.1
 djangorestframework==3.13.1
+flake8==4.0.1
 Markdown==3.3.7
+mccabe==0.6.1
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pytz==2022.1
 sqlparse==0.4.2
